feat: enhance JsonRpcPeer with synchronous request/notification methods and add JoinableTaskFactory support

--- a/src/PlatynUI.JsonRpc/PlatynUI.JsonRpc.csproj
+++ b/src/PlatynUI.JsonRpc/PlatynUI.JsonRpc.csproj
@@ -4,4 +4,8 @@
     <Description>PlatynUI JsonRpc</Description>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.VisualStudio.Threading.Only" />
+  </ItemGroup>
+
 </Project>
