feat(Server): create a new library only for JsonRpcs Endpoints, so we can use this in server and client libraries

--- a/src/PlatynUI.JsonRpc.Endpoints/PlatynUI.JsonRpc.Endpoints.csproj
+++ b/src/PlatynUI.JsonRpc.Endpoints/PlatynUI.JsonRpc.Endpoints.csproj
@@ -1,8 +1,8 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
+
   <PropertyGroup>
-    <OutputType>Exe</OutputType>
-    <RuntimeIdentifiers>win-x64;win-arm64;linux-x64;linux-arm;osx-arm64</RuntimeIdentifiers>
-    <NeedsPlatynUIExtensions>true</NeedsPlatynUIExtensions>
+    <Description>PlatynUI JsonRpc Endpoints</Description>
+    <RootNamespace>PlatynUI.JsonRpc.Endpoints</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
@@ -11,8 +11,7 @@
       Include="..\PlatynUI.JsonRpc.Generators\PlatynUI.JsonRpc.Generators.csproj"
       OutputItemType="Analyzer"
       ReferenceOutputAssembly="false" />
-    <PackageReference Include="System.CommandLine.NamingConventionBinder" />
-    <ProjectReference Include="..\PlatynUI.JsonRpc.Endpoints\PlatynUI.JsonRpc.Endpoints.csproj" />
+    <ProjectReference Include="..\PlatynUI.Runtime\PlatynUI.Runtime.csproj" />
   </ItemGroup>
 
   <!-- <PropertyGroup>
@@ -22,6 +21,6 @@
 
   <ItemGroup>
     <Compile Remove="Generated\**\*.cs" />
-  </ItemGroup>
-   -->
+  </ItemGroup> -->
+
 </Project>
