--- a/src/Playground/Playground.csproj
+++ b/src/Playground/Playground.csproj
@@ -6,21 +6,8 @@
     <!-- <NeedsPlatynUIExtensions>true</NeedsPlatynUIExtensions> -->
   </PropertyGroup>
 
-  <PropertyGroup>
-    <EmitCompilerGeneratedFiles>true</EmitCompilerGeneratedFiles>
-    <CompilerGeneratedFilesOutputPath>Generated</CompilerGeneratedFilesOutputPath>
-  </PropertyGroup>
-
   <ItemGroup>
-    <Compile Remove="Generated\**\*.cs" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="../PlatynUI.JsonRpc/PlatynUI.JsonRpc.csproj" />
-    <ProjectReference
-      Include="..\PlatynUI.JsonRpc.Generators\PlatynUI.JsonRpc.Generators.csproj"
-      OutputItemType="Analyzer"
-      ReferenceOutputAssembly="false" />
+    <ProjectReference Include="..\PlatynUI.JsonRpc.Endpoints\PlatynUI.JsonRpc.Endpoints.csproj" />
   </ItemGroup>
 
 </Project>
