feat: implement mouse an keyboard for linux/X11
Co-authored-by: Fabian Tsirogiannis <fabian.tsirogiannis@imbus.de>
Signed-off-by: Daniel Biehl <daniel.biehl@imbus.de>

--- a/src/PlatynUI.Extension.Linux.AtSpi2/PlatynUI.Extension.Linux.AtSpi2.csproj
+++ b/src/PlatynUI.Extension.Linux.AtSpi2/PlatynUI.Extension.Linux.AtSpi2.csproj
@@ -18,6 +18,11 @@
     <AdditionalFiles Include="xml/Component.xml" DBusGeneratorMode="Proxy" />
     <AdditionalFiles Include="xml/Application.xml" DBusGeneratorMode="Proxy" />
     <AdditionalFiles Include="xml/Registry.xml" DBusGeneratorMode="Proxy" />
+    <AdditionalFiles Include="xml/Action.xml" DBusGeneratorMode="Proxy" />
+    <AdditionalFiles Include="xml/Document.xml" DBusGeneratorMode="Proxy" />
+    <AdditionalFiles Include="xml/Text.xml" DBusGeneratorMode="Proxy" />
+    <AdditionalFiles Include="xml/EditableText.xml" DBusGeneratorMode="Proxy" />
+    <AdditionalFiles Include="xml/Value.xml" DBusGeneratorMode="Proxy" />
   </ItemGroup>
 
   <ItemGroup>
