--- a/.github/workflows/test-package.yml
+++ b/.github/workflows/test-package.yml
@@ -23,7 +23,7 @@ jobs:
       matrix:
         os: [windows-latest, ubuntu-latest, macos-latest]
         python-version: ["3.10", "3.11", "3.12", "3.13"]
-        robot-version: ["6.0", "6.1", "7.0", "7.1", "7.2"]
+        robot-version: ["6.0", "6.1", "7.0", "7.1", "7.2", "7.3"]
 
     steps:
       - uses: actions/checkout@v4
